# compliance-pipeline

./: README.md  pyproject.toml
.github/workflows/: c2p-opa.yml
compliance_pipeline/: __init__.py  c2p_opa.py  p2c_opa.py
compliance_pipeline/c2p_plugin/: __init__.py  opa.py
compliance_pipeline/c2p_plugin/opa-policy-resources/_lib/: terraform.rego
compliance_pipeline/c2p_plugin/opa-policy-resources/aws/ksi-cna-01/: restrict_network_traffic.rego
compliance_pipeline/c2p_plugin/opa-policy-resources/aws/ksi-iam-01/: phishing_resistant_mfa.rego
compliance_pipeline/c2p_plugin/opa-policy-resources/aws/ksi-mla-02/: audit_logging.rego
compliance_pipeline/c2p_plugin/opa-policy-resources/aws/ksi-svc-02/: network_encryption.rego
compliance_pipeline/c2p_plugin/opa-policy-resources/aws/ksi-svc-06/: secrets_management.rego
compliance_pipeline/c2p_plugin/opa-policy-resources/azure/ksi-cna-01/: restrict_network_traffic.rego
compliance_pipeline/collectors/: __init__.py  conftest_runner.py
data/: component-definition-opa.csv
pipeline/: assessment-results.json  assessment-results.md  component-definition.json  conftest-results.json  csv-to-oscal-cd.config
pipeline/opa-policies/_lib/: helpers.rego
pipeline/opa-policies/ksi-cna-01/: restrict_network_traffic.rego
pipeline/opa-policies/ksi-iam-01/: phishing_resistant_mfa.rego
pipeline/opa-policies/ksi-svc-02/: network_encryption.rego
pipeline/opa-policies/ksi-svc-06/: secrets_management.rego
terraform/aws/compliant/: main.tf
terraform/aws/non-compliant/: main.tf  tfplan.json
(+9 files in other folders)
