[project]
name = "compliance-pipeline"
version = "0.2.0"
description = "Compliance-to-Policy pipeline for FedRAMP 20x with Kyverno and OPA support"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "compliance-trestle>=3.9.0",
  "compliance-to-policy>=0.5.0",
  "jinja2>=3.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[project.scripts]
c2p-opa = "compliance_pipeline.c2p_opa:main"
p2c-opa = "compliance_pipeline.p2c_opa:main"
conftest-runner = "compliance_pipeline.collectors.conftest_runner:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["compliance_pipeline"]